// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`to-satisfy when it is a subtree fails when the actual does not the expected 1`] = `
"expected
<div class=\\"user\\">
  <h3 id=\\"name\\">Harriet</h3>
  <div id=\\"child\\">Foo</div>
</div>
to satisfy
<div class=\\"user\\">
  <h3 id=\\"name\\">Harriet</h3>
  <div id=\\"child\\">Children</div>
</div>

<div class=\\"user\\">
  <h3 id=\\"name\\">Harriet</h3>
  <div id=\\"child\\">
    Foo // should equal 'Children'
        //
        // -Foo
        // +Children
  </div>
</div>"
`;

exports[`to-satisfy when it is a subtree fails when the actual not matching the expected type 1`] = `
"expected
<div class=\\"user\\">
  <h3 id=\\"name\\">Harriet</h3>
  <div id=\\"child\\">Foo</div>
</div>
to satisfy <h3>Header</h3>

<div // should equal 'h3'
     class=\\"user\\">
  <h3 id=\\"name\\">Harriet</h3> // should satisfy Header
  <div id=\\"child\\">Foo</div> // should be removed
</div>"
`;

exports[`to-satisfy with the exhaustively flag fails when the actual does not match the expected 1`] = `
"expected
<div class=\\"user\\">
  <h3 id=\\"name\\">Harriet</h3>
  <div id=\\"child\\">Children</div>
</div>
to exhaustively satisfy <div class=\\"user\\"><h3>Harriet</h3><div id=\\"kids\\">Kids</div></div>

<div class=\\"user\\">
  <h3 id=\\"name\\">Harriet</h3>
  <div id=\\"child\\" // expected 'child' to equal 'kids'
                  //
                  // -child
                  // +kids
  >
    Children // should equal 'Kids'
             //
             // -Children
             // +Kids
  </div>
</div>"
`;

exports[`to-satisfy with the exhaustively flag when negated fails when actual is equal the expected 1`] = `
"expected
<div class=\\"user\\">
  <h3 id=\\"name\\">Harriet</h3>
  <div id=\\"child\\">Children</div>
</div>
not to exhaustively satisfy
<div class=\\"user\\">
  <h3 id=\\"name\\">Harriet</h3>
  <div id=\\"child\\">Children</div>
</div>"
`;
